--- a/deploy/index.html
+++ b/deploy/index.html
@@ -12,7 +12,7 @@
 
 
     <link rel="stylesheet" href="css/styles.css">
-    <title>Web 2 In-Class</title>
+    <title>HomeworkWeb2</title>
 </head>
 
 <body>
