--- a/dev/content/index.html
+++ b/dev/content/index.html
@@ -15,8 +15,8 @@
                 </li>
             </section>
     <section>
+                    <ol>
                     <section>
-                        <ol>
                           <head>Most Popular Plants</head>
                         <img src="img/section-3/snake.png" alt="snake plant">
                         <head>Snake Plant</head>
@@ -42,8 +42,7 @@
                         <head>Monstera</head>
                         <article>Nicknamed the “swiss cheese plant”, the Monstera deliciosa is famous for its quirky natural leaf holes. A vibrant green beauty, it can give any interior space instant jungle vibes.</article>
                     </section>  
-                        </ol>
-                        
+                    </ol>
                 </section>
     <footer>
                         <ol>
@@ -52,7 +51,11 @@
                             <p>20 Tolland Turnpike Manchester, CT 06042-1763</p>
                             <p>800 829-4161</p>
                         </ol>
-                      
+                        <head>Follow Us!</head>
+                        <img src="img/footer/facebook-square-brands.png" alt="facebook">
+                        <img src="img/footer/instagram-square-brands.png" alt="insta">
+                        <img src="img/footer/twitter-square-brands.png" alt="twitter">
+                        <img src="img/footer/youtube-square-brands.png" alt="youtube">
                     </footer>
 </body>
 </html>
