--- a/dev/content/index.html
+++ b/dev/content/index.html
@@ -2,7 +2,9 @@
 <html>
 <body>
     <header>
-        <head>House Plants</head>
+        <head>
+            <title>House Plants</title>
+        </head>
     </header>
     <section>
             <img src="img/section-1/hero.png" alt="house plants">
@@ -45,12 +47,10 @@
                     </ol>
                 </section>
     <footer>
-                        <ol>
                             <head>Locations</head>
                             <head>Connecticut</head>
                             <p>20 Tolland Turnpike Manchester, CT 06042-1763</p>
                             <p>800 829-4161</p>
-                        </ol>
                         <head>Follow Us!</head>
                         <img src="img/footer/facebook-square-brands.png" alt="facebook">
                         <img src="img/footer/instagram-square-brands.png" alt="insta">
