--- a/dev/content/index.html
+++ b/dev/content/index.html
@@ -2,9 +2,7 @@
 <html>
 <body>
     <header>
-        <head>
-            <title>House Plants</title>
-        </head>
+        <h1>House Plants</h1>
     </header>
     <section>
             <img src="img/section-1/hero.png" alt="house plants">
@@ -52,10 +50,13 @@
                             <p>20 Tolland Turnpike Manchester, CT 06042-1763</p>
                             <p>800 829-4161</p>
                         <head>Follow Us!</head>
-                        <img src="img/footer/facebook-square-brands.png" alt="facebook">
+                        <li>
+                            <img src="img/footer/facebook-square-brands.png" alt="facebook">
                         <img src="img/footer/instagram-square-brands.png" alt="insta">
                         <img src="img/footer/twitter-square-brands.png" alt="twitter">
                         <img src="img/footer/youtube-square-brands.png" alt="youtube">
+                        </li>
+                    
                     </footer>
 </body>
 </html>
