--- a/dev/content/index.html
+++ b/dev/content/index.html
@@ -24,8 +24,8 @@
                     </section>
                     <section>
                         <img src="img/section-3/peromia.png" alt="Peperomia">
-                        <head>'"Peperomia"</head>
-                        <article>"Resembling the fan-favorite rubber plant, just tinier, Peperomia are plants in the peppercorn family, Piperaceae. Peperomia make great houseplants, are low maintenance, and clean the air.</article>
+                        <head>Peperomia</head>
+                        <article>Resembling the fan-favorite rubber plant, just tinier, Peperomia are plants in the peppercorn family, Piperaceae. Peperomia make great houseplants, are low maintenance, and clean the air.</article>
                     </section>
                     <section>
                         <img src="img/section-3/succulent.png" alt="succulent">
@@ -50,13 +50,10 @@
                             <p>20 Tolland Turnpike Manchester, CT 06042-1763</p>
                             <p>800 829-4161</p>
                         <head>Follow Us!</head>
-                        <li>
-                            <img src="img/footer/facebook-square-brands.png" alt="facebook">
+                        <img src="img/footer/facebook-square-brands.png" alt="facebook">
                         <img src="img/footer/instagram-square-brands.png" alt="insta">
                         <img src="img/footer/twitter-square-brands.png" alt="twitter">
                         <img src="img/footer/youtube-square-brands.png" alt="youtube">
-                        </li>
-                    
                     </footer>
 </body>
 </html>
