--- a/dev/content/index.html
+++ b/dev/content/index.html
@@ -1,59 +1,66 @@
+
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <body>
-    <header>
-        <h1>House Plants</h1>
-    </header>
     <section>
-            <img src="img/section-1/hero.png" alt="house plants">
+        <img src="img/section-1/hero.png" alt="house plants">
+    </section>
+    <section>
+            <li>
+            <img src="img/section-2/hero2.png" alt="potted monstera">
+            <img src="img/section-2/leaves.png" alt="potted leaves">
+            <img src="img/section-2/lineofplants.png" alt="line of potted plants">
+            </li>
         </section>
     <section>
-                <li>
-                <img src="img/section-2/hero2.png" alt="potted monstera">
-                <img src="img/section-2/leaves.png" alt="potted leaves">
-                <img src="img/section-2/lineofplants.png" alt="line of potted plants">
-                </li>
-            </section>
-    <section>
-                    <ol>
-                    <section>
-                          <head>Most Popular Plants</head>
-                        <img src="img/section-3/snake.png" alt="snake plant">
-                        <head>Snake Plant</head>
-                        <article>The Snake Plant Laurentii is a succulent plant characterized by its upright swordlike leaves with vibrant yellow edges. A multitasker, the snake plant purifies indoor air by removing toxins such as formaldehyde, xylene, and toluene.</article>
-                    </section>
-                    <section>
-                        <img src="img/section-3/peromia.png" alt="Peperomia">
-                        <head>Peperomia</head>
-                        <article>Resembling the fan-favorite rubber plant, just tinier, Peperomia are plants in the peppercorn family, Piperaceae. Peperomia make great houseplants, are low maintenance, and clean the air.</article>
-                    </section>
-                    <section>
-                        <img src="img/section-3/succulent.png" alt="succulent">
-                        <head>Succulent</head>
-                        <article>Succulent refers to a wide range of drought-tolerant plants. Our assortment includes a variety of six or twelve in plastic nursery pots. They require bright, direct light—but little else. Perfect for a small windowsill.</article>
-                    </section>
-                    <section>
-                        <img src="img/section-3/alocasia.png" alt="alocasia">
-                        <head>Alocasia</head>
-                        <article>The large, impactful leaves of the Alocasia have led to its common name, the Elephant Ear plant. They are happiest when given some morning or afternoon sunlight but protected from extended periods of direct sunlight.</article>
-                    </section>
-                    <section>
-                        <img src="img/section-3/monstera.png" alt="monstera">
-                        <head>Monstera</head>
-                        <article>Nicknamed the “swiss cheese plant”, the Monstera deliciosa is famous for its quirky natural leaf holes. A vibrant green beauty, it can give any interior space instant jungle vibes.</article>
-                    </section>  
-                    </ol>
+                <ol>
+                <section>
+                    <article>
+                      <h1>Most Popular Plants</h1>
+                    <img src="img/section-3/snake.png" alt="snake plant">
+                    <h2>Snake Plant</h2>
+                    </article>
+                    <article>
+                        <p>The Snake Plant Laurentii is a succulent plant characterized by its upright swordlike leaves with vibrant yellow edges. A multitasker, the snake plant purifies indoor air by removing toxins such as formaldehyde, xylene, and toluene.</p> 
+                    </article>
                 </section>
-    <footer>
-                            <head>Locations</head>
-                            <head>Connecticut</head>
-                            <p>20 Tolland Turnpike Manchester, CT 06042-1763</p>
-                            <p>800 829-4161</p>
-                        <head>Follow Us!</head>
-                        <img src="img/footer/facebook-square-brands.png" alt="facebook">
-                        <img src="img/footer/instagram-square-brands.png" alt="insta">
-                        <img src="img/footer/twitter-square-brands.png" alt="twitter">
-                        <img src="img/footer/youtube-square-brands.png" alt="youtube">
-                    </footer>
+                <section>
+                    <article>
+                    <img src="img/section-3/peromia.png" alt="Peperomia">
+                    <h3>Peperomia</h3>
+                    </article>
+                    <article>
+                        <p>Resembling the fan-favorite rubber plant, just tinier, Peperomia are plants in the peppercorn family, Piperaceae. Peperomia make great houseplants, are low maintenance, and clean the air.</p>
+                    </article>
+                </section>
+                <section>
+                    <article></article>
+                    <img src="img/section-3/succulent.png" alt="succulent">
+                    <h4>Succulent</h4>
+                    </article>
+                    <article>
+                        <p>Succulent refers to a wide range of drought-tolerant plants. Our assortment includes a variety of six or twelve in plastic nursery pots. They require bright, direct light—but little else. Perfect for a small windowsill.</p>
+                    </article>
+                </section>
+                <section>
+                    <article>
+                    <img src="img/section-3/alocasia.png" alt="alocasia">
+                    <head>Alocasia</head>
+                    </article>
+                    <article>
+                        <p>The large, impactful leaves of the Alocasia have led to its common name, the Elephant Ear plant. They are happiest when given some morning or afternoon sunlight but protected from extended periods of direct sunlight.</p>
+                    </article>
+                </section>
+                <section>
+                    <article>
+                    <img src="img/section-3/monstera.png" alt="monstera">
+                    <head>Monstera</head>
+                    </article>
+                    <article>
+                        <p>Nicknamed the “swiss cheese plant”, the Monstera deliciosa is famous for its quirky natural leaf holes. A vibrant green beauty, it can give any interior space instant jungle vibes.</p>
+                    </article>
+                </section>  
+                </ol>
+            </section>
 </body>
 </html>
