--- a/dev/content/index.html
+++ b/dev/content/index.html
@@ -4,6 +4,8 @@
 <body>
     <section>
         <img src="img/section-1/hero.png" alt="house plants">
+        <h1>How to Care for Your Plant</h1>
+        <h2>What Plant is Right for You?</h2>
     </section>
     <section>
             <li>
