--- a/deploy/index.html
+++ b/deploy/index.html
@@ -5,19 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- Google Font -->
-
-
+    <link rel="stylesheet" href="https://use.typekit.net/juj0slo.css">
+    <link rel="stylesheet" href="https://use.typekit.net/juj0slo.css">
     <!-- Font Awesome -->
-
-
-    <link rel="stylesheet" href="css/styles.css">
+<link rel="stylesheet" href="css/styles.css">
     <title>HomeworkWeb2</title>
 </head>
 <body>  
     
     <header>
         <section>
-            <h1>"House Plants"</h1> 
+            <h1>House Plants</h1> 
         </section>
     </header>
     <section>
@@ -53,9 +51,10 @@
                 </li>
             </section>
     <section>
-                    <h1>Most Popular Plants</h1>
+                    <id=Heading3>
+                        <h1>Most Popular Plants</h1>
                     <ul>
-                        <li id="Snake Plant">
+                        <li id="Snake">
                            <img src="img/section-3/snake.png" alt="snake plant">
                             <section>
                                 <h1>Snake Plant</h1>
